welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: Missing closing brace `}' assumed here
def growFlowers(){
^FlowerCase:1: error: expected class or object definition
def growFlowers(){
^FlowerCase:35: error: expected class or object definition
def dessineFleur() {
^FlowerCase:45: error: expected class or object definition
def ligneFleur1(){
^FlowerCase:61: error: expected class or object definition
def ligneFleur2(){
^